@@ -2228,29 +2228,12 @@ static int init_methodwrappertype(void)
 
  ******************************************************/
 
-/* Note: this definition is not compatible to 2.2.3, since
-   the gi_weakreflist does not exist. Therefore, we don't
-   create the object ourselves, but use the provided function
-   with a fake frame. The gi_weakreflist is not touched.
- */
-
-typedef struct {
-    PyObject_HEAD
-    /* The gi_ prefix is intended to remind of generator-iterator. */
-
-    PyFrameObject *gi_frame;
-
-    /* True if generator is being executed. */
-    char gi_running;
-
-    /* List of weak reference. */
-    PyObject *gi_weakreflist;
-} genobject;
-
 static PyTypeObject wrap_PyGen_Type;
+/* Used to initialize a generator created by gen_new. */
+static PyFrameObject *gen_exhausted_frame;
 
 static PyObject *
-gen_reduce(genobject *gen)
+gen_reduce(PyGenObject *gen)
 {
     PyObject *tup;
     tup = Py_BuildValue("(O()(Oi))",
@@ -2264,11 +2247,13 @@ gen_reduce(genobject *gen)
 static PyObject *
 gen_new(PyTypeObject *type, PyObject *args, PyObject *kwds)
 {
-    genobject *gen;
-
+    PyGenObject *gen;
     if (is_wrong_type(type)) return NULL;
-    Py_INCREF(Py_None);
-    gen = (genobject *) PyGenerator_New((PyFrameObject *) Py_None);
+
+    /* A reference to frame is stolen by PyGen_New. */
+    assert(gen_exhausted_frame != NULL);
+    assert(PyFrame_Check(gen_exhausted_frame));
+    gen = (PyGenObject *) PyGen_New(slp_ensure_new_frame(gen_exhausted_frame));
     if (gen == NULL)
         return NULL;
     Py_TYPE(gen) = type;
@@ -2278,7 +2263,7 @@ gen_new(PyTypeObject *type, PyObject *args, PyObject *kwds)
 static PyObject *
 gen_setstate(PyObject *self, PyObject *args)
 {
-    genobject *gen = (genobject *) self;
+    PyGenObject *gen = (PyGenObject *) self;
     PyFrameObject *f;
     int gi_running;
 
@@ -2290,16 +2275,17 @@ gen_setstate(PyObject *self, PyObject *args)
     if (!gi_running) {
         if ((f = slp_ensure_new_frame(f)) != NULL) {
             /* use a second one for late initialization */
-            genobject *tmpgen;
+            PyGenObject *tmpgen;
             /* PyGenerator_New eats an existing reference */
-            if ((tmpgen = (genobject *)
-                       PyGenerator_New(f)) == NULL) {
+            if ((tmpgen = (PyGenObject *)
+                       PyGen_New(f)) == NULL) {
                 Py_DECREF(f);
                 return NULL;
             }
             Py_INCREF(f);
-            Py_CLEAR(gen->gi_frame);
-            gen->gi_frame = f;
+            Py_SETREF(gen->gi_frame, f);
+            Py_INCREF(f->f_code);
+            Py_SETREF(gen->gi_code, (PyObject *)f->f_code);
             /* The frame the temporary generator references
                will have GeneratorExit raised on it, when the
                temporary generator is torn down.  So clearing
@@ -2323,8 +2309,9 @@ gen_setstate(PyObject *self, PyObject *args)
      * generator without the corresponding tasklet.
      */
     Py_INCREF(f);
-    Py_CLEAR(gen->gi_frame);
-    gen->gi_frame = f;
+    Py_SETREF(gen->gi_frame, f);
+    Py_INCREF(f->f_code);
+    Py_SETREF(gen->gi_code, (PyObject *)f->f_code);
     gen->gi_running = gi_running;
     Py_TYPE(gen) = Py_TYPE(gen)->tp_base;
     Py_INCREF(gen);
@@ -2339,10 +2326,10 @@ DEF_INVALID_EXEC(gen_iternext_callback)
 static int init_generatortype(void)
 {
     int res;
-    genobject *gen = (genobject *) run_script(
-        "def f(): yield 42\n"           /* define a generator */
-        "g = f()\n"                     /* instanciate it */
-        "g.__next__()\n", "g");        /* force callback frame creation */
+    PyGenObject *gen = (PyGenObject *) run_script(
+        "def exhausted_generator(): yield 42\n"   /* define a generator */
+        "g = exhausted_generator()\n"             /* instanciate it */
+        "g.__next__()\n", "g");                       /* force callback frame creation */
     PyFrameObject *cbframe;
 
     if (gen == NULL || gen->gi_frame->f_back == NULL)
@@ -2352,6 +2339,13 @@ static int init_generatortype(void)
               gen->gi_frame->f_back->f_execute,
               REF_INVALID_EXEC(gen_iternext_callback))
           || init_type(&wrap_PyGen_Type, initchain);
+
+    assert(gen_exhausted_frame == NULL);
+    gen_exhausted_frame = slp_ensure_new_frame(gen->gi_frame);
+    if (gen_exhausted_frame == NULL) {
+        return -1;
+    }
+
     Py_DECREF(gen);
     return res;
 }
@@ -2454,6 +2448,20 @@ slp_pickle_moduledict(PyObject *self, PyObject *args)
   source module initialization
 
  ******************************************************/
+static int
+_wrapmodule_traverse(PyObject *self, visitproc visit, void *arg)
+{
+    Py_VISIT(gen_exhausted_frame);
+    return 0;
+}
+
+static int
+_wrapmodule_clear(PyObject *self)
+{
+    Py_CLEAR(gen_exhausted_frame);
+    return 0;
+}
+
 static struct PyModuleDef _wrapmodule = {
     PyModuleDef_HEAD_INIT,
     "_stackless._wrap",
@@ -2461,8 +2469,8 @@ static struct PyModuleDef _wrapmodule = {
     -1,
     NULL,
     NULL,
-    NULL,
-    NULL,
+    _wrapmodule_traverse,
+    _wrapmodule_clear,
     NULL
 };
 
@@ -2470,7 +2478,6 @@ PyObject*
 init_prickelpit(void)
 {
     PyObject *copy_reg, *tmp;
-    int ret = 0;
 
     types_mod = PyModule_Create(&_wrapmodule);
     if (types_mod == NULL)
@@ -2487,7 +2494,11 @@ init_prickelpit(void)
         Py_CLEAR(types_mod);
         return NULL;
     }
-    ret = initchain();
+    if (initchain()) {
+        Py_CLEAR(pickle_reg);
+        Py_CLEAR(types_mod);
+        return NULL;
+    }
     Py_CLEAR(pickle_reg);
     tmp = types_mod;
     types_mod = NULL;
